--- a/package.json
+++ b/package.json
@@ -1,41 +1,34 @@
 {
-  "name": "styled",
-  "version": "0.1.0",
+  "name": "bnk48-face-recognition",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://mahdis-hoseini.github.io/Facial-Recognition-Web-App",
+  "license": "MIT",
+  "homepage": "http://mahdis-hoseini.github.io/Facial-Recognition-Web-App",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^3.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "face-api.js": "^0.16.1",
+    "gh-pages": "^2.2.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-webcam": "^1.0.4",
+    "tslib": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b master -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
